@@ -1,9 +1,18 @@
+005-06-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* testsuite/latency/latency.c (latency): Reduce warmup time again,
+	to 1 second. Make overrun accounting in latency thread, to avoid
+	losing overruns.
+
 2005-06-04  Philippe Gerum  <rpm@xenomai.org>
 
 	* skins/rtai/lib: Use constructor section to connect to the
 	in-kernel skin.
 
 2005-06-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* testsuite/latency/latency.c (latency): Reduce warmup time to 2
+	seconds.
 
 	* testsuite/latency/latency.c: Warm-up times, for better accuracy,
 	especially on low-end machines. Compute extrema latencies in
